--- a/client/src/index.css
+++ b/client/src/index.css
@@ -4,7 +4,7 @@ body {
   font-weight: 500;
 
   color-scheme: light dark;
-  color: rgb(0, 0, 0);
+  color: #3b0102;
   background-color: #fff8dc;
 
   font-synthesis: none;
