--- a/client/src/App.css
+++ b/client/src/App.css
@@ -1,7 +1,13 @@
-h1,
 h2,
 h3,
+h4,
 p {
   padding: 0 1vw;
   margin: 0.3rem 0;
+}
+
+h1 {
+  padding: 0 3vw;
+  margin: 0.3rem 0;
+  text-decoration: underline;
 }
