--- a/client/src/components/MainCanvas.css
+++ b/client/src/components/MainCanvas.css
@@ -1,7 +1,7 @@
 .main-canvas {
   width: 70vw;
   /* border: 2px solid black; */
-  margin-top: 1.5vh;
+  margin: 15vh 0;
   border-radius: 20px;
   /* border: 2px solid black; */
   background-color: #f5d6b1;
@@ -10,6 +10,7 @@
   flex-direction: column;
   /* justify-content: center; */
   /* align-items: center; */
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 @media screen and (max-width: 60em) {
