--- a/client/src/components/NavigationBar.css
+++ b/client/src/components/NavigationBar.css
@@ -1,16 +1,25 @@
 .navbar-card {
-  /* --hover-text-color: white; */
+  position: fixed;
+  top: 0;
+  background-color: #fff8dc;
+
+  /* background-color: #c67d58; */
+  /* background-color: #b6443f; */
   display: flex;
   flex-direction: row;
   width: 100%;
   height: 10vh;
   justify-content: center;
   gap: 10%;
-  transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out;
+  transition: background-color 0.5s ease-in-out, color 0.5s ease-in-out,
+    top 0.5s;
+  z-index: 2;
+  box-shadow: rgba(149, 157, 165, 0.2) 0px 8px 24px;
 }
 
 .navbar-card:hover {
-  background-color: #3b0102;
+  /* background-color: #3b0102; */
+  background-color: #762b2c;
   box-shadow: rgba(0, 0, 0, 0.35) 0px 5px 15px;
   color: white;
 }
@@ -35,7 +44,7 @@
   /* border: 2px solid green; */
   align-items: center;
   text-decoration: none;
-  color: black;
+  color: #3b0102;
   transition: color 0.5s ease-in-out, transform 0.5s, box-shadow 1s;
 }
 
@@ -59,20 +68,27 @@
 .navbar-links {
   font-size: 3vmin;
   text-decoration: none;
-  color: black;
+  color: #3b0102;
   transition: color 0.5s ease-in-out, transform 0.5s, box-shadow 1s;
 }
 
 .navbar-links:hover {
   transform: scale(1.2) perspective(0px);
-  box-shadow: 4px 4px 10px rgba(60, 60, 93, 0.33);
+  /* box-shadow: 4px 4px 10px rgba(60, 60, 93, 0.33); */
 }
 
 .navbar-brand:hover {
   transform: scale(1.2) perspective(0px);
-  box-shadow: 4px 4px 10px rgba(60, 60, 93, 0.33);
+  /* box-shadow: 4px 4px 10px rgba(60, 60, 93, 0.33); */
 }
 
-.navbar-brand:active {
+/* .navbar-brand:active {
   color: violet;
+} */
+
+.scrolled {
+  position: fixed;
+  top: 0;
+  /* left: 0; */
+  background-color: #fff8dc;
 }
