--- a/client/src/components/Intro.css
+++ b/client/src/components/Intro.css
@@ -5,14 +5,15 @@
   flex-direction: row;
   align-items: center;
   justify-content: center;
-  gap: 1rem;
+  gap: 2rem;
 }
 
 .intro-right {
   display: flex;
   flex-direction: column;
-  align-items: start;
-  width: 35%;
+  align-items: center;
+  width: 45%;
+  height: auto;
 }
 
 .intro-right-top {
@@ -27,28 +28,33 @@
 
 .intro-pic-card {
   display: flex;
-  justify-content: end;
-  width: auto;
+  /* justify-content: end; */
+  width: 30vh;
   height: 30vh;
 }
 
 .intro-pic {
+  object-fit: fill;
   border-radius: 50%;
-  max-width: 100%;
-  max-height: 100%;
+  /* max-width: 100%;
+  max-height: 100%; */
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 .intro-name {
   /* padding: 0 2vw; */
-  font-size: 6vmin;
+  font-size: 60px;
+  font-weight: 700;
 }
 
 .intro-salutation {
-  font-size: 2vmin;
+  font-size: 30px;
 }
 
 .intro-right-bottom {
-  font-size: 2vmin;
+  font-size: 15px;
 }
 
 @media screen and (max-width: 60em) {
@@ -66,5 +72,14 @@
 
   .intro-pic-card {
     height: 40vh;
+    width: 40vh;
+  }
+
+  .intro-name {
+    font-size: 30px;
+  }
+
+  .intro-salutation {
+    font-size: 15px;
   }
 }
