--- a/src/components/Cards.css
+++ b/src/components/Cards.css
@@ -19,6 +19,7 @@
 
 .card p,
 .card h4,
+.card h3,
 .card h2 {
   padding: 0 20px;
 }
@@ -67,7 +68,7 @@
 }
 
 .card-text-scrollable {
-  height: 100%;
+  /* height: 100%; */
   overflow-x: hidden;
 }
 
@@ -81,4 +82,14 @@
   flex-direction: column;
   justify-content: center;
   align-items: center;
+}
+
+.card-text-scrollable-item {
+  padding: 0 20px;
+}
+
+.card-text-caption-card {
+  display: flex;
+  flex-flow: row wrap;
+  justify-content: space-between;
 }
