--- a/src/components/Card.css
+++ b/src/components/Card.css
@@ -16,3 +16,10 @@
   box-shadow: 5px 5px 20px rgba(60, 60, 93, 0.33);
   cursor: pointer;
 }
+
+@media screen and (max-width: 60em) {
+  .card {
+    height: 40rem;
+    margin: 2rem 1rem;
+  }
+}
